# packet-flow

./: .gitignore  ADAPTER_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  INSTALLATION_GUIDE_WSL.md  LICENSE  PROJECT_STATUS.md  README.md  TEST_RESULTS_SUMMARY.md
AuthService/: .gitignore  AUTHSERVICE_ARCHITECTURE.md  AuthService.sln  CONTRIBUTING.md  README.md
AuthService/src/AuthService.API/: AuthService.API.csproj  Program.cs  appsettings.json
AuthService/src/AuthService.API/Controllers/: AuthController.cs  UserController.cs
AuthService/src/AuthService.Core/Configuration/: JwtSettings.cs
AuthService/src/AuthService.Core/DTOs/: LoginDto.cs  RefreshTokenDto.cs  RegisterDto.cs  TokenResponseDto.cs  UserInfoDto.cs
AuthService/src/AuthService.Core/Exceptions/: AccountLockedException.cs  UnauthorizedException.cs  ValidationException.cs
AuthService/src/AuthService.Core/Interfaces/: IAuthService.cs  IPasswordService.cs  ITokenService.cs  IUserRepository.cs
AuthService/src/AuthService.Core/Models/: AuthLog.cs  RefreshToken.cs  Role.cs  User.cs  UserRole.cs
AuthService/src/AuthService.Infrastructure/: AuthService.Infrastructure.csproj
AuthService/src/AuthService.Infrastructure/Data/: AuthDbContext.cs
AuthService/src/AuthService.Infrastructure/Migrations/: 20251023154412_InitialCreate.Designer.cs  20251023154412_InitialCreate.cs  AuthDbContextModelSnapshot.cs
AuthService/src/AuthService.Infrastructure/Repositories/: UserRepository.cs
AuthService/src/AuthService.Infrastructure/Services/: AuthService.cs  PasswordService.cs  TokenService.cs
AuthService/tests/AuthService.IntegrationTests/: AuthService.IntegrationTests.csproj
AuthService/tests/AuthService.IntegrationTests/Controllers/: AuthControllerTests.cs  ComprehensiveAuthTests.cs  UserControllerTests.cs
AuthService/tests/AuthService.UnitTests/: AuthService.UnitTests.csproj
AuthService/tests/AuthService.UnitTests/Services/: AuthServiceTests.cs  ComprehensiveAuthServiceTests.cs  PasswordServiceTests.cs  TokenServiceTests.cs
TemplateService/: .gitignore  TEMPLATESERVICE_ARCHITECTURE.md  TemplateService.sln
TemplateService/src/TemplateService.API/: Program.cs  TemplateService.API.csproj  TemplateService.API.http  appsettings.Development.json  appsettings.json
TemplateService/src/TemplateService.API/Controllers/: TemplatesController.cs
TemplateService/src/TemplateService.API/Properties/: launchSettings.json
TemplateService/src/TemplateService.Core/DTOs/: CreateTemplateDto.cs  TemplateDto.cs  TemplateSummaryDto.cs  UpdateTemplateDto.cs
TemplateService/src/TemplateService.Core/Exceptions/: NotFoundException.cs  UnauthorizedAccessException.cs  ValidationException.cs
TemplateService/src/TemplateService.Core/Interfaces/: ITagRepository.cs  ITemplateRepository.cs  ITemplateService.cs
TemplateService/src/TemplateService.Core/Models/: Tag.cs  Template.cs  TemplateTag.cs
TemplateService/src/TemplateService.Infrastructure/: TemplateService.Infrastructure.csproj
TemplateService/src/TemplateService.Infrastructure/Data/: TemplateDbContext.cs
TemplateService/src/TemplateService.Infrastructure/Repositories/: TagRepository.cs  TemplateRepository.cs
TemplateService/src/TemplateService.Infrastructure/Services/: TemplateService.cs
TemplateService/tests/TemplateService.IntegrationTests/: ComprehensiveTemplateApiTests.cs  TemplateApiTests.cs  TemplateService.IntegrationTests.csproj
TemplateService/tests/TemplateService.UnitTests/: TemplateService.UnitTests.csproj
TemplateService/tests/TemplateService.UnitTests/Services/: ComprehensiveTemplateServiceTests.cs  TemplateServiceTests.cs
adapter/: .gitignore  ADAPTER_ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  TEST_REPORT.md  build-all.ps1  build-all.sh  build-native.ps1  build-native.sh  pack-nuget.ps1
adapter/dotnet/: PacketFlow.Ns3Adapter.sln
adapter/dotnet/PacketFlow.Ns3Adapter/: Applications.cs  Links.cs  PacketFlow.Ns3Adapter.csproj  Simulation.cs
adapter/dotnet/PacketFlow.Ns3Adapter.Examples/: CsmaBusExample.cs  P2PEchoExample.cs  PacketFlow.Ns3Adapter.Examples.csproj  Program.cs  WiFiExample.cs
adapter/dotnet/PacketFlow.Ns3Adapter.Tests/: CallbackLifecycleTests.cs  EndToEndTests.cs  FlowStatisticsTests.cs  InteropTests.cs  MemorySafetyTests.cs  PacketFlow.Ns3Adapter.Tests.csproj  PacketTracingTests.cs  SimulationLifecycleTests.cs
adapter/dotnet/PacketFlow.Ns3Adapter.Tests/Unit/: ApplicationsUnitTests.cs  LinksUnitTests.cs  SimulationUnitTests.cs  StubNativeInterop.cs
adapter/dotnet/PacketFlow.Ns3Adapter/Interop/: INativeInterop.cs  NativeInterop.cs  NativeLibraryResolver.cs  NativeMethods.cs  Ns3Exception.cs  SafeHandles.cs
adapter/native/: CMakeLists.txt
adapter/native/include/: ns3shim.h
adapter/native/src/: ns3shim.cpp
frontend/: .gitignore  nx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json
frontend/apps/packet-flow/: eslint.config.mjs  project.json  tsconfig.json
frontend/apps/packet-flow/public/i18n/: en.json  fa.json  fr.json
frontend/apps/packet-flow/src/: index.html  styles.css
frontend/apps/packet-flow/src/app/: api.service.ts  app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  auth.service.ts  language.service.ts  template.service.ts  theme.service.ts
frontend/apps/packet-flow/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/apps/packet-flow/src/app/header/: header.component.html  header.component.ts
frontend/apps/packet-flow/src/app/hero/: hero.component.css  hero.component.html  hero.component.ts
frontend/apps/packet-flow/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/apps/packet-flow/src/app/login/: login.component.html  login.component.ts
frontend/apps/packet-flow/src/app/network-bg/: network-bg.component.ts
(+11 files in other folders)
